--- a/src/main/resources/templates/basic/editForm.html
+++ b/src/main/resources/templates/basic/editForm.html
@@ -33,6 +33,17 @@
       <input type="text" id="quantity" name="quantity" class="form-control" th:value="${item.quantity}" value="10">
     </div>
     <hr class="my-4">
+
+    <!-- single checkbox -->
+    <div>판매 여부</div>
+    <div>
+      <div class="form-check">
+        <input type="checkbox" id="open" th:field="${item.open}" class="form-checkinput">
+        <label for="open" class="form-check-label">판매 오픈</label>
+      </div>
+    </div>
+
+
     <div class="row">
       <div class="col">
         <button class="w-100 btn btn-primary btn-lg" type="submit">저장
